@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.13007 2006/02/20 11:18:52 hiramatsu Exp $
+$NetBSD: CHANGES,v 1.13008 2006/02/20 12:12:44 adam Exp $
 
 Changes to the packages collection and infrastructure in 2006:
 
@@ -1116,3 +1116,7 @@ Changes to the packages collection and infrastructure in 2006:
 	Updated graphics/digikam to 0.8.1 [markd 2006-02-20]
 	Updated graphics/digikamimageplugins to 0.8.1 [markd 2006-02-20]
 	Updated www/p5-libapreq2 to 2.07 [hiramatsu 2006-02-20]
+	Added x11/qt4 version 4.1.0 [adam 2006-02-20]
+	Added x11/qt4-docs version 4.1.0 [adam 2006-02-20]
+	Added x11/qt4-libs version 4.1.0 [adam 2006-02-20]
+	Added x11/qt4-tools version 4.1.0 [adam 2006-02-20]
